# af-component-datarobot-mcp

./: .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  copier-module.yaml  copier.yml
.cursor/: BUGBOT.md
.github/: .licenserc.yaml  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/actions/render-copier-instance/: action.yml
.github/actions/setup-caching/: action.yml
.github/workflows/: afcomponentmcp-infra-test.yaml  afcomponentmcp-license-test.yaml  afcomponentmcp-release.yaml  license-check.yaml
.harness/inputsets/: test-af-component-fastmcp-inputset.yaml
.harness/pipelines/: test-af-component-fastmcp.yml
fixtures/infra/: pyproject.toml
fixtures/infra/infra/: __init__.py
template/: .Taskfile.template  .gitignore  Taskfile.yaml.jinja
template/.datarobot/cli/: {{fastmcp_app_name|lower|replace('-','_')}}.yaml.jinja  {{mcp_app_name_file}}.yaml.jinja  {{mcp_app_name|lower|replace('-','_')}}.yaml.jinja
template/.github/workflows/: {{ fastmcp_app_name }}-test.yml.jinja  {{ mcp_app_name }}-test.yml.jinja
template/infra/: Taskfile.yaml
template/infra/infra/: {{fastmcp_app_name|lower|replace('-','_')}}.py.jinja  {{mcp_app_name_file}}.py.jinja  {{mcp_app_name|lower|replace('-','_')}}.py.jinja
template/{{fastmcp_app_name}}/: README.md.jinja  Taskfile.yaml  pyproject.toml.jinja
template/{{mcp_app_name_file}}/: AGENTS.md.jinja  README.md.jinja  Taskfile.yaml  dev.md  pyproject.toml.jinja  test_interactive.py
template/{{mcp_app_name}}/: README.md.jinja  Taskfile.yaml  pyproject.toml.jinja
(+38 files in other folders)
